src/test/ui/consts/const-eval/ub-uninhabit.stderr
error[E0080]: this constant likely exhibits undefined behavior
  --> $DIR/ub-uninhabit.rs:20:1
   |
LL | const BAD_BAD_BAD: Bar = unsafe { Foo { a: 1 }.b };
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered a value of an uninhabited type
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rust compiler repository if you believe it should not be considered undefined behavior

error[E0080]: this constant likely exhibits undefined behavior
  --> $DIR/ub-uninhabit.rs:23:1
   |
LL | const BAD_BAD_REF: &Bar = unsafe { Foo { a: 1 }.c };
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered a value of an uninhabited type at .<deref>
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rust compiler repository if you believe it should not be considered undefined behavior

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
